新增 react 扩展笔记

--- a/13-拓展/1_react拓展/package.json
+++ b/13-拓展/1_react拓展/package.json
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "volta": {
+    "node": "16.20.2",
+    "npm": "8.19.4"
   }
 }
